--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,11 @@ a {
   box-sizing: border-box;
 }
 
+h1 {
+  text-align: center;
+  
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
