modifying hardcoded shop data

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,10 +15,11 @@ a {
   box-sizing: border-box;
 }
 
-h1 {
+h1, p {
   text-align: center;
   
 }
+
 
 @media (prefers-color-scheme: dark) {
   html {
