--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,20 @@
+body {
+  background-color: #F7EDE2;
+}
+
+.color2 {
+  background-color: #F6BD60;
+}
+
+.color3 {
+  background-color: #F5CAC3;
+}
+
+
+.color5 {
+  background-color: #F28482;
+}
+
 .container {
   padding: 0 2rem;
 }
@@ -6,6 +23,36 @@
   flex-wrap: wrap;
   flex-direction: row;
 }
+
+h1 {
+  text-align: right;
+  color: #8d5857;
+}
+
+p {
+  color: #8d5857
+}
+
+a:hover {
+  color: #8d5857 !important;
+}
+
+a {
+  color: #F6BD60;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.paragraphFont {
+  color: #8d5857;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .main {
   min-height: 100vh;
   padding: 4rem 0;
@@ -78,8 +125,8 @@
 }
 
 .card {
-  margin: 1rem;
-  padding: 1.5rem;
+  margin: .5rem;
+  padding: 1rem;
   text-align: left;
   color: inherit;
   text-decoration: none;
@@ -92,8 +139,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #F28482;
+  border-color: #F28482;
 }
 
 .card h2 {
@@ -105,6 +152,35 @@
   margin: 0;
   font-size: 1.25rem;
   line-height: 1.5;
+  color: #F28482;
+}
+
+.card .card-body .btn {
+  display: block;
+  margin:1rem auto;
+  color: #fffdfa;
+}
+
+.card .card-title {
+  text-align: center;
+  color: #8d5857;
+}
+
+.btn-primary {
+  background-color:#F5CAC3;
+  border-color: black;
+}
+
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active {
+  background-color: #8d5857 !important;
+}
+
+
+.navbar {
+  position: fixed;
+  z-index: 1000;
+  background-color: #F7EDE2;
+  color:#8d5857;
 }
 
 .logo {
