--- a/styles/index.css
+++ b/styles/index.css
@@ -51,6 +51,8 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 400px;
+  margin: 0 auto;
 }
 
 .main {
